# penguins

./: CMakeLists.txt  colors.h  generation.c  generation.h  input.c  input.h  main.c  movement.c  movement.h  placement.c  placement.h  structures.h  utility_functions.c  utility_functions.h
